# FiniteViz

./: .env.example  .gitignore  .gitignore.swo  .gitignore.swp  README.md  commands.txt  compose.dev.yaml  compose.prod.yaml  devcontainer.yml  post-create.sh
.devcontainer/: Dockerfile  devcontainer.json
client/: Dockerfile  Dockerfile.prod
client/finiteViz/: drawMesh.js  index.html  package-lock.json  package.json  startup.sh  vite.config.js
client/finiteViz/deploy/: startup.dev.sh  startup.prod.sh
client/finiteViz/src/: App.jsx  main.jsx  style.css
client/finiteViz/src/BaseMesh/: BaseMesh.jsx  Coordinates.jsx  Elements.jsx  MeshProps.jsx  Splits.jsx  Viz.jsx  index.js
client/finiteViz/src/Meshes/BaseMesh/: BaseMesh.jsx  Coordinates.jsx  Elements.jsx  MeshMetadata.jsx  MeshProps.jsx  Splits.jsx  Viz.jsx  index.js
client/finiteViz/src/Meshes/OutputMesh/: OutputMesh.jsx  index.js
client/finiteViz/src/api/: fetch.js  useQueryMesh.js
client/finiteViz/src/reducers/: meshReducer.js
client/finiteViz/src/views/: Error.jsx  Table.jsx  Tabs.jsx  Viz.jsx
compute_worker/: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.prod  consumer  consumer.cpp  consumer.h  test.cpp
compute_worker/.run/: Makefile.run.xml
compute_worker/mpap3_chubi/: .gitignore
compute_worker/mpap3_chubi/lib/other/: MyOutputStream.h
compute_worker/mpap3_chubi/proj/smsh/: consumer.h
compute_worker/src/: .gitignore  FemStdMesh.h.bk  post-create.sh
compute_worker/src/lib/other/: MyOutputStream.h
compute_worker/src/mpap3_chubi/proj/smsh/: consumer.h
compute_worker/src/proj/: Makefile
compute_worker/src/proj/smsh/: Makefile  NewMesh.h  consumer.h  simple_mesh.cpp
test_messaging/: consumer  consumer.cpp  producer  producer.cpp
web_server/: Dockerfile  Dockerfile.prod  ResponseHandler.py  async_publisher.py  config.py  consume.py  make_mesh.ipynb  msh.txt  publisher.py  requirements.txt  server.py  startup.sh  test.py  test_server.py
web_server/deploy/: startup.dev.sh  startup.prod.sh
(+2 files in other folders)
